--- a/App/package.json
+++ b/App/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^4.12.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "react-top-loading-bar": "^2.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
