routes added, need testing

--- a/Back/.env.example
+++ b/Back/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=sql211.infinityfree.com
 DB_PORT=3306
-DB_DATABASE=back
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=if0_35249876_result_system
+DB_USERNAME=if0_35249876
+DB_PASSWORD=rg4w1nvz
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
