--- a/App/package.json
+++ b/App/package.json
@@ -22,6 +22,7 @@
     "react-top-loading-bar": "^2.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
